--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /Streams/nbproject/private/
 /Streams/build/
+/LocalPortScanner/nbproject/private/
+/Socket/nbproject/private/
+/Socket/build/
+/TCP_Server/nbproject/private/
+/TCP_Server/build/
